Fix alignment on quote and header

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,8 @@ h3 {
     font-size: 18px;
     color: #E5E7EB;
 
+    margin-left: 32px;
+    margin-right: 32px;
     margin-bottom: 100px;
 }
 
@@ -108,6 +110,7 @@ h3 {
 
 .img-container {
     display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
     background-color: grey;
@@ -125,6 +128,7 @@ h3 {
 .card-container {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 64px;
 
     margin-bottom: 100px;
@@ -154,18 +158,19 @@ h3 {
 }
 
 .quote-box {
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
-    width: 800px;
-    margin: 100px;
+    padding: 100px;
+    max-width: 1000px;
 }
 
 .quote-author {
     font-weight: 700;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .author-box {
-    width: 800px;
     display: flex;
     justify-content: flex-end;
 }
